fix kolom input

--- a/login.html
+++ b/login.html
@@ -19,18 +19,12 @@
             <form class="login-form">
                 <div class="form-group">
                     <label for="username">Username :</label>
-                    <div class="input-wrapper">
-                        <input type="text" id="username" name="username" required>
-                        <img src="src/img/input.png" alt="Input Box" class="input-bg">
-                    </div>
+                    <input type="text" id="username" name="username" class="input-field" required>
                 </div>
                 
                 <div class="form-group">
                     <label for="password">Password :</label>
-                    <div class="input-wrapper">
-                        <input type="password" id="password" name="password" required>
-                        <img src="src/img/input.png" alt="Input Box" class="input-bg">
-                    </div>
+                    <input type="password" id="password" name="password" class="input-field" required>
                 </div>
                 
                 <div class="button-group">
