--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="content">
             <img src="src/img/logo.png" alt="Hollow Knight Logo" class="logo">
             <nav class="menu">
-                <a href="#" class="menu-item">Login</a>
+                <a href="login.html" class="menu-item">Login</a>
                 <a href="#" class="menu-item">Register</a>
             </nav>
         </div>
