--- a/index.html
+++ b/index.html
@@ -16,9 +16,42 @@
             <img src="src/img/logo.png" alt="Hollow Knight Logo" class="logo">
             <nav class="menu">
                 <a href="login.html" class="menu-item">Login</a>
-                <a href="#" class="menu-item">Register</a>
+                <a href="register.html" class="menu-item">Register</a>
             </nav>
         </div>
     </div>
+    
+    <audio id="bgMusic" loop>
+        <source src="src/music/CityOfTears.mp3" type="audio/mpeg">
+    </audio>
+    
+    <button id="musicToggle" class="music-toggle">🔊</button>
+
+    <script>
+        const music = document.getElementById('bgMusic');
+        const musicToggle = document.getElementById('musicToggle');
+        let isPlaying = false;
+
+        musicToggle.addEventListener('click', () => {
+            if (isPlaying) {
+                music.pause();
+                musicToggle.textContent = '🔇';
+                isPlaying = false;
+            } else {
+                music.play();
+                musicToggle.textContent = '🔊';
+                isPlaying = true;
+            }
+        });
+
+        // Auto play music on first interaction
+        document.addEventListener('click', () => {
+            if (!isPlaying) {
+                music.play();
+                musicToggle.textContent = '🔊';
+                isPlaying = true;
+            }
+        }, { once: true });
+    </script>
 </body>
 </html>
