--- a/login.html
+++ b/login.html
@@ -78,9 +78,8 @@
             
             if (username === 'knight' && password === 'hollownest') {
                 errorMsg.style.display = 'none';
-                alert('Login berhasil!');
                 // Redirect ke halaman utama
-                window.location.href = 'index.html';
+                window.location.href = 'main.html';
             } else {
                 errorMsg.textContent = 'Zote The Mighty Said :\nPassword atau Username salah bang';
                 errorMsg.style.display = 'block';
