--- a/main.html
+++ b/main.html
@@ -17,6 +17,47 @@
         </div>
     </div>
 
+    <div class="content-section">
+        <!-- Hallownest Story Card -->
+        <div class="story-card">
+            <h2>Hallownest</h2>
+            <div class="divider-line"></div>
+            <p>
+                The land of Hallownest covers a vast network of caves and tunnels in the midst of a mountainous area. They are inhabited by sentient insects that follow ancient creatures.
+            </p>
+            <p>
+                Hallownest was once a thriving kingdom, but now lies in ruins. The few bugs that remain are either mad with infection or struggle to survive in the crumbling kingdom.
+            </p>
+        </div>
+
+        <!-- Belief Story Card -->
+        <div class="story-card">
+            <h2>Belief</h2>
+            <div class="divider-line"></div>
+            <p class="subtitle">Worship of the Pale King</p>
+            <div class="icon-decoration">⚔️</div>
+            <p>
+                The bugs of Hallownest believed that the Pale King created the entire world and everything in it. After his fall, they worshipped him through the King's Idols, icons which depict the King. With just a few of them being destroyed by its owner, throughout Hallownest, such as the Fountain of Ancient Basin and a shrine in Crystal Peak.
+            </p>
+        </div>
+
+        <!-- The Infection Story Card -->
+        <div class="story-card infection-card">
+            <h2>The Infection</h2>
+            <div class="divider-line"></div>
+            <p>
+                When the Moth Tribe stopped worshipping the Radiance and started to forget it, it forced it back to remember her through their dreams, creating the infection. To stop it, the Pale King created mindless vessels born from the Void, choosing only one to seal the Radiance within their mind, and placed them inside the Temple of the Black Egg.
+            </p>
+            <div class="icon-decoration">🦋</div>
+            <img src="src/img/knight.png" alt="Knight" class="knight-character">
+        </div>
+
+        <!-- Continue Prompt -->
+        <div class="continue-prompt">
+            Press Right Arrow to Continue ➡
+        </div>
+    </div>
+
     <audio id="bgMusic" loop>
         <source src="src/music/CityOfTears.mp3" type="audio/mpeg">
     </audio>
